[project]
name = "image_maker"
version = "0.1.0"
description = "It makes images!"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]==0.136.*",
    "lib_image_maker",
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 120
namespace-packages = ["tests"]

[tool.ruff.lint]
select = [
    "A",      # std types
    "ANN",    # annotations
    "BLE",    # blanket except
    "C4",     # comprehension
    "E",      # style errors
    "EM",     # error messages
    "EXE",    # shebangs
    "F",      # format
    "FA",     # future
    "FLY",    # expr fstring
    "FURB",   # syn upgrades
    "G",      # log messages
    "I",      # imports
    "ICN",    # import conventions
    "INP001",
    "ISC",    # str cat
    "LOG",    # logging
    "NPY",    # numpy
    "PERF",   # perflint
    "PIE",    # misc
    "PL",     # pylint
    "PT",     # pytest
    "Q",      # quotes
    "RUF",    # variety
    "T10",    # pdb.trace
    "T20",    # print
    "TC",     # type checking
    "TD",     # todos
    "TRY",    # try/catch
    "UP",     # syn upgrades
    "W",      # style warnings
]
ignore = [
    "PIE808",  # range start 0
    "PLR",     # silly
    "PLC0415", # imports inside functions
    "TD003",   # todo require link
    "UP015",   # open() mode='r'
]

[tool.uv.workspace]
members = ["lib_image_maker"]

[tool.uv.sources]
lib_image_maker = { workspace = true }
